Fixed buttons being too small on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,6 +360,7 @@ body {
     border-radius: 8px;
     border: none;
     transition: 0.125s;
+    padding: 0;
 }
 
 .notesBar .remove {
@@ -566,12 +567,11 @@ button:hover {
 }
 
 .optionsDiv img {
-    height: 18px;
+    height: 20px;
     padding-right: 5px;
     position: absolute;
     left: 20px;
-    scale: 1.3;
-    transform: translateY(1px);
+    scale: 1.2;
     filter: invert(var(--invertdm))
 }
 
@@ -639,7 +639,6 @@ button:hover {
     margin-left: auto;
     height: 40px;
     font-size: 16px;
-    transform: translateY(-2px);
 }
 
 .sessionDiv img {
@@ -759,7 +758,6 @@ button:hover {
 
 .inoutdiv .iconbutton img {
     height: 20px;
-    transform: translateY(10px);
 }
 
 .inoutdiv .iconbutton:hover {
@@ -984,11 +982,11 @@ button:hover {
     text-decoration: none;
     background-color: var(--bar);
     color: var(--text-color);
-    padding: 3px 10px 10px;
+    padding: 10px;
     margin-bottom: 10px;
     border-radius: 10px;
     transition: background-color .2s;
-    display: inline-block;
+    display: inline-flex;
 }
 
 .links a:hover {
@@ -996,8 +994,7 @@ button:hover {
 }
 
 .links a img {
-    transform: translateY(5px);
-    padding-right: 10px;
+    margin-right: 10px;
     filter: invert(var(--invertdm));
 }
 
